Exploratory refactoring
- fix several Sonar error report
- leverage Java 8 syntax
- create specific Jolokia plugin test